<resources>
    <string name="app_name">Space Invader</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_quit">Quit</string>
    <string name="start_view">Space Invader!\n</string>
    <string name="intro1">Touching the screen to control the shuttle, try to kill all the aliens without being shoot\n</string>
    <string name="intro2">Now, Show time!\n</string>
    <string name="title_activity_game">GameActivity</string>
</resources>
