<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button_start"
       android:layout_marginBottom="32dp"
       android:layout_alignParentBottom="true"
       android:id="@+id/button"
       android:textColor="#990099"
       android:onClick="start"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_quit"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#990099"/>
    <TextView android:id="@+id/start_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:text="@string/start_view"
        android:textSize="100px"
        android:textColor="#0080ff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="62dp" />
    <TextView android:id="@+id/intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro1"
        android:textSize="50px"
        android:textColor="#023456"
        android:layout_above="@+id/intro2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView android:id="@+id/intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro2"
        android:textSize="100px"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
